[gd_scene load_steps=12 format=3 uid="uid://kwr6dwirb8jd"]

[ext_resource type="Script" path="res://Synth/Synth.gd" id="1_3g8h2"]
[ext_resource type="Texture2D" uid="uid://bvp0ebffdw5cb" path="res://Synth/UI/grabber.png" id="2_1ftdj"]
[ext_resource type="PackedScene" uid="uid://pi7vexf72o6o" path="res://Synth/SynthKey/synth_key.tscn" id="2_yk25y"]
[ext_resource type="Script" path="res://Synth/Slider_filter.gd" id="3_qdmf8"]
[ext_resource type="Script" path="res://Synth/Volume_slider.gd" id="4_iue6o"]
[ext_resource type="Script" path="res://Synth/Slider_attack.gd" id="5_222kq"]
[ext_resource type="Script" path="res://Synth/Slider_decay.gd" id="6_6hb6f"]
[ext_resource type="Script" path="res://Synth/Slider_sustain.gd" id="7_u0w80"]
[ext_resource type="Script" path="res://Synth/Slider_release.gd" id="8_dhq8l"]
[ext_resource type="PackedScene" uid="uid://cm4g6avx25r34" path="res://Synth/SynthKey/synth_key_black.tscn" id="10_yb2rn"]

[sub_resource type="AudioStreamGenerator" id="AudioStreamGenerator_yjr14"]
mix_rate = 22050.0
buffer_length = 7.0

[node name="Synth" type="CanvasLayer"]
script = ExtResource("1_3g8h2")

[node name="Synth_audio_1" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamGenerator_yjr14")
bus = &"music"

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.137255, 0.137255, 0.137255, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 0
offset_top = 323.0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="C4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")

[node name="D4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 146.83

[node name="E4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 164.81

[node name="F4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 174.61

[node name="G4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 196.0

[node name="A4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 220.0

[node name="B4" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 246.94

[node name="C5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 261.63

[node name="D5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 293.67

[node name="E5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 329.63

[node name="F5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 349.23

[node name="G5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 392.0

[node name="A5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 440.0

[node name="B5" parent="ColorRect/MarginContainer/HBoxContainer" node_paths=PackedStringArray("synth") instance=ExtResource("2_yk25y")]
layout_mode = 2
synth = NodePath("../../../..")
frequency = 493.88

[node name="MarginContainer2" type="MarginContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 328.0
theme_override_constants/margin_left = 45
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 45
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Slider_wave" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_icons/grabber = ExtResource("2_1ftdj")
theme_override_icons/grabber_highlight = ExtResource("2_1ftdj")
max_value = 3.0

[node name="Slider_filter" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_icons/grabber = ExtResource("2_1ftdj")
theme_override_icons/grabber_highlight = ExtResource("2_1ftdj")
min_value = 100.0
max_value = 10000.0
value = 500.0
script = ExtResource("3_qdmf8")

[node name="Volume" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_icons/grabber = ExtResource("2_1ftdj")
theme_override_icons/grabber_highlight = ExtResource("2_1ftdj")
max_value = 1.0
step = 0.001
script = ExtResource("4_iue6o")
bus_name = "music"

[node name="Slider_attack" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_icons/grabber = ExtResource("2_1ftdj")
theme_override_icons/grabber_highlight = ExtResource("2_1ftdj")
max_value = 1.0
step = 0.001
script = ExtResource("5_222kq")

[node name="Slider_decay" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_icons/grabber = ExtResource("2_1ftdj")
theme_override_icons/grabber_highlight = ExtResource("2_1ftdj")
max_value = 1.0
step = 0.001
script = ExtResource("6_6hb6f")

[node name="Slider_sustain" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_icons/grabber = ExtResource("2_1ftdj")
theme_override_icons/grabber_highlight = ExtResource("2_1ftdj")
max_value = 1.0
step = 0.001
script = ExtResource("7_u0w80")

[node name="Slider_release" type="VSlider" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_icons/grabber = ExtResource("2_1ftdj")
theme_override_icons/grabber_highlight = ExtResource("2_1ftdj")
max_value = 1.0
step = 0.001
script = ExtResource("8_dhq8l")

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label_wave" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Wave
"

[node name="Label_filter" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Filter"

[node name="Label_volume" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Volume"

[node name="Label_attack" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Attack"

[node name="Label_decay" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Decay"

[node name="Label_sustain" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Sustain"

[node name="Label_release" type="Label" parent="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 1
text = "Realease"

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_right = 53.0
offset_bottom = 647.0
color = Color(0.34902, 0.258824, 0.117647, 1)

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
layout_mode = 0
offset_left = 1099.0
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0.34902, 0.258824, 0.117647, 1)

[node name="Black_key" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="C4#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_yb2rn")]
layout_mode = 0
anchor_left = 2.725
anchor_top = 8.45
anchor_right = 3.875
anchor_bottom = 13.225
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
metadata/_edit_use_anchors_ = true

[node name="D4#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_yb2rn")]
layout_mode = 0
anchor_left = 4.525
anchor_top = 8.45
anchor_right = 5.675
anchor_bottom = 13.225
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 155.56
metadata/_edit_use_anchors_ = true

[node name="F4#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_yb2rn")]
layout_mode = 0
anchor_left = 8.275
anchor_top = 8.45
anchor_right = 9.425
anchor_bottom = 13.225
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 185.0
metadata/_edit_use_anchors_ = true

[node name="G4#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_yb2rn")]
layout_mode = 0
anchor_left = 10.125
anchor_top = 8.45
anchor_right = 11.275
anchor_bottom = 13.225
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 207.65
metadata/_edit_use_anchors_ = true

[node name="A4#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_yb2rn")]
layout_mode = 0
anchor_left = 11.975
anchor_top = 8.45
anchor_right = 13.125
anchor_bottom = 13.225
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 233.08
metadata/_edit_use_anchors_ = true

[node name="C5#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_yb2rn")]
layout_mode = 0
anchor_left = 15.675
anchor_top = 8.45
anchor_right = 16.825
anchor_bottom = 13.225
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 275.18
metadata/_edit_use_anchors_ = true

[node name="D5#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_yb2rn")]
layout_mode = 0
anchor_left = 17.525
anchor_top = 8.45
anchor_right = 18.675
anchor_bottom = 13.225
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 311.13
metadata/_edit_use_anchors_ = true

[node name="F5#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_yb2rn")]
layout_mode = 0
anchor_left = 21.225
anchor_top = 8.45
anchor_right = 22.375
anchor_bottom = 13.225
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 369.99
metadata/_edit_use_anchors_ = true

[node name="G5#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_yb2rn")]
layout_mode = 0
anchor_left = 23.075
anchor_top = 8.45
anchor_right = 24.225
anchor_bottom = 13.225
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 415.3
metadata/_edit_use_anchors_ = true

[node name="A5#" parent="Black_key" node_paths=PackedStringArray("synth") instance=ExtResource("10_yb2rn")]
layout_mode = 0
anchor_left = 24.925
anchor_top = 8.45
anchor_right = 26.075
anchor_bottom = 13.225
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
synth = NodePath("../..")
frequency = 466.16
metadata/_edit_use_anchors_ = true

[connection signal="value_changed" from="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_wave" to="." method="_on_wave_type_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_filter" to="." method="_on_filter_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_attack" to="." method="_on_slider_attack_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_decay" to="." method="_on_slider_decay_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_sustain" to="." method="_on_slider_sustain_value_changed"]
[connection signal="value_changed" from="ColorRect/MarginContainer2/VBoxContainer/HBoxContainer/Slider_release" to="." method="_on_slider_release_value_changed"]
